--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@tensorflow/tfjs-node": "^3.12.0",
     "@vladmandic/face-api": "^1.6.1",
     "body-parser": "^1.19.1",
-    "canvas": "canvas",
+    "canvas": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
