--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "@tensorflow/tfjs-node": "^3.12.0",
     "@vladmandic/face-api": "^1.6.1",
+    "aws-sdk": "^2.1048.0",
     "body-parser": "^1.19.1",
     "canvas": "^2.8.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "mime": "^3.0.0",
     "multer": "^1.4.4"
   }
 }
